<resources>
    <string name="app_name">HomeWork1</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="dot">.</string>

    <string name="del">Del</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>


    <string name="fact">!</string>
    <string name="pow">^</string>
    <string name="sqrt">sqrt</string>
    <string name="e">e</string>
    <string name="bracket1">(</string>
    <string name="bracket2">)</string>
    <string name="mod">%</string>


    <string name="pie">PI</string>


    <string name="next">next</string>
    <string name="prev">prev</string>

    <string name="equal">=</string>


</resources>
