<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:background="@color/white">
    </EditText>

    <Button
        android:id="@+id/del"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text"
        android:text="@string/del"
        android:textSize="20sp"
        android:visibility="visible"
        android:background="@color/silver"
        android:onClick="btnOp"/>

    <Button
        android:id="@+id/seven"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/del"
        android:background="@color/silver"
        android:text="@string/seven"
        android:textSize="30sp"
        android:onClick="btnNum"
        />

    <Button
        android:id="@+id/eight"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/del"
        android:layout_toRightOf="@+id/seven"
        android:background="@color/silver"
        android:text="@string/eight"
        android:textSize="30sp"
        android:onClick="btnNum"/>

    <Button
        android:id="@+id/nine"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/del"
        android:layout_toRightOf="@+id/eight"
        android:background="@color/silver"
        android:text="@string/nine"
        android:textSize="30sp"
        android:onClick="btnNum"/>
    <Button
        android:id="@+id/div"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/del"
        android:layout_toRightOf="@+id/nine"
        android:background="@color/silver"
        android:text="@string/div"
        android:textSize="30sp"
        android:onClick="btnOp1"/>

    <Button
        android:id="@+id/four"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/seven"
        android:background="@color/silver"
        android:text="@string/four"
        android:textSize="30sp"
        android:onClick="btnNum"/>


    <Button
        android:id="@+id/five"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/seven"
        android:layout_toRightOf="@+id/four"
        android:background="@color/silver"
        android:text="@string/five"
        android:textSize="30sp"
        android:onClick="btnNum"/>

    <Button
        android:id="@+id/six"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/seven"
        android:layout_toRightOf="@+id/five"
        android:background="@color/silver"
        android:text="@string/six"
        android:textSize="30sp"
        android:onClick="btnNum"/>

    <Button
        android:id="@+id/mul"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/seven"
        android:layout_toRightOf="@+id/six"
        android:background="@color/silver"
        android:text="@string/mul"
        android:textSize="30sp"
        android:onClick="btnOp1"/>


    <Button
        android:id="@+id/one"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/four"
        android:background="@color/silver"
        android:text="@string/one"
        android:textSize="30sp"
        android:onClick="btnNum"/>


    <Button
        android:id="@+id/two"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/four"
        android:layout_toRightOf="@+id/one"
        android:background="@color/silver"
        android:text="@string/two"
        android:textSize="30sp"
        android:onClick="btnNum"/>

    <Button
        android:id="@+id/three"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/four"
        android:layout_toRightOf="@+id/two"
        android:background="@color/silver"
        android:text="@string/three"
        android:textSize="30sp"
        android:onClick="btnNum"/>

    <Button
        android:id="@+id/minus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/four"
        android:layout_toRightOf="@+id/three"
        android:background="@color/silver"
        android:text="@string/minus"
        android:textSize="30sp"
        android:onClick="btnOp1"/>


    <Button
        android:id="@+id/dot"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/one"
        android:background="@color/silver"
        android:text="@string/dot"
        android:textSize="30sp"
        android:onClick="btnNum"/>


    <Button
        android:id="@+id/zero"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/one"
        android:layout_toRightOf="@+id/dot"
        android:background="@color/silver"
        android:text="@string/zero"
        android:textSize="30sp"
        android:onClick="btnNum"/>

    <Button
        android:id="@+id/equal"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/one"
        android:layout_toRightOf="@+id/zero"
        android:background="@color/silver"
        android:text="@string/equal"
        android:textSize="30sp"
        android:onClick="btnEq"
        />
    <Button
        android:id="@+id/plus"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/one"
        android:layout_toRightOf="@+id/equal"
        android:background="@color/silver"
        android:text="@string/plus"
        android:textSize="30sp"
        android:onClick="btnOp1"/>


</RelativeLayout>
