<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Activity2">


        <EditText
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:background="@color/white">
        </EditText>

        <Button
            android:id="@+id/del"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text"
            android:text="@string/del"
            android:textSize="20sp"
            android:visibility="visible"
            android:background="@color/silver"
            android:onClick="btnOp"/>

        <Button
            android:id="@+id/sin"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/del"
            android:background="@color/silver"
            android:text="@string/sin"
            android:textSize="30sp"
            android:onClick="btnOp2"/>

        <Button
            android:id="@+id/cos"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/del"
            android:layout_toRightOf="@+id/sin"
            android:background="@color/silver"
            android:text="@string/cos"
            android:textSize="30sp"
            android:onClick="btnOp2"/>
        <Button
            android:id="@+id/tan"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/del"
            android:layout_toRightOf="@+id/cos"
            android:background="@color/silver"
            android:text="@string/tan"
            android:textSize="30sp"
            android:onClick="btnOp2"/>

        <Button
            android:id="@+id/ln"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/del"
            android:layout_toRightOf="@+id/tan"
            android:background="@color/silver"
            android:text="@string/ln"
            android:textSize="30sp"
            android:onClick="btnOp2"/>

        <Button
            android:id="@+id/log"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/sin"
            android:background="@color/silver"
            android:text="@string/log"
            android:textSize="30sp"
            android:onClick="btnOp2"/>

        <Button
            android:id="@+id/pie"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/sin"
            android:layout_toRightOf="@+id/log"
            android:background="@color/silver"
            android:text="@string/pie"
            android:textSize="30sp"
            android:onClick="btnOp2"/>
        <Button
            android:id="@+id/e"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/sin"
            android:layout_toRightOf="@+id/pie"
            android:background="@color/silver"
            android:text="@string/e"
            android:textSize="30sp"
            android:onClick="btnOp2"/>
        <Button
            android:id="@+id/mod"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/sin"
            android:layout_toRightOf="@+id/e"
            android:background="@color/silver"
            android:text="@string/mod"
            android:textSize="30sp"
            android:onClick="btnOp2"/>

        <Button
            android:id="@+id/fact"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/log"
            android:background="@color/silver"
            android:text="@string/fact"
            android:textSize="30sp"
            android:onClick="btnOp2"/>

        <Button
            android:id="@+id/pow"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/log"
            android:layout_toRightOf="@+id/fact"
            android:background="@color/silver"
            android:text="@string/pow"
            android:textSize="30sp"
            android:onClick="btnOp2"/>


        <Button
            android:id="@+id/sqrt"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/log"
            android:layout_toRightOf="@+id/pow"
            android:background="@color/silver"
            android:text="@string/sqrt"
            android:textSize="30sp"
            android:onClick="btnOp2"/>

        <Button
            android:id="@+id/bracket1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/log"
            android:layout_toRightOf="@+id/sqrt"
            android:background="@color/silver"
            android:text="@string/bracket1"
            android:textSize="30sp"
            android:onClick="btnOp2"/>
        <Button
            android:id="@+id/bracket2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/fact"
            android:background="@color/silver"
            android:text="@string/bracket2"
            android:textSize="30sp"
            android:onClick="btnOp2"/>

    </RelativeLayout>

